better show job

--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -1,44 +1,112 @@
-<!-- <div class="col-md-12">
+<!-- <div class="col-md-12 job-content">
+ <div class= "row">
+  <h1> <%= @job.title %></h1>
 
-  <h1>
-    <%= @job.title %>
-  </h1>
 
-  <p>
-    <%= simple_format(@job.description) %>
+  <br><br>
+ <hr style="width:85%" />
 
-  </p>
-  <div class="text-center">
-    <% if current_user && current_user.has_applied?(@job) %>
-     <%= link_to("您已投递，不可重复投递", new_job_resume_path(@job), class: "btn btn-danger btn-sm-disabled", method: :get) %>
-    <% else %>
-    <%= link_to("投递简历", new_job_resume_path(@job), class: "btn btn-info btn-sm",method: :get) %>
-    <% end %>
+  <div class="col-md-3 job-action-box">
 
-    <% if current_user && current_user.is_favorite_of?(@job) %>
-    <%= link_to('取消收藏'.html_safe, favorite_job_path(@job, type: "unfavorite"), method: :put) %>
+    <div>
+      <% if current_user && current_user.is_favorite_of?(@job) %>
+        <%= link_to favorite_job_path(@job, type: "unfavorite"), method: :put, class: "btn btn-lg btn-primary" do %>
+          <span class="fa fa-star"></span> 已收藏
+        <% end %>
+      <% else %>
+        <%= link_to favorite_job_path(@job, type: "favorite"), method: :put, class: "btn btn-lg btn-default" do %>
+          <span class="fa fa-star-o"></span> 收藏
+        <% end %>
+      <% end %>
+    </div>
+
+   <div>
+
+     <% if current_user && current_user.has_applied?(@job) %>
+       <%= link_to("已投过简历", '#', class: "btn btn-lg btn-danger") %>
      <% else %>
-    <%= link_to('添加收藏'.html_safe, favorite_job_path(@job, type: "favorite"), method: :put) %>
-    <% end %>
+       <%= link_to("投递简历", new_job_resume_path(@job), class: "btn btn-lg btn-success") %>
+     <% end %>
+   </div>
   </div>
+ </div>
+
+  <div class="row">
+   <div class="col-md-7 col-md-offset-1 job-content-box">
+     <div class="content-info">
+       <h4>Descriptin</h4>
+       <p><%= simple_format(@job.description) %></p>
+     </div>
+     <hr />
+     <div class="mail-info">
+       <h4>联络信息：</h4>
+       <p class="email"><span class="fa fa-envelope"></span> <%= @job.contact_email %></p>
+     </div>
+   </div>
+ </div>
 
 </div> -->
 
-<div class="col-md-12 job-content">
-  <h1> <%= @job.title %></h1>
-  <p>
-    <%= simple_format(@job.description) %>
 
-  </p>
-  <br><br>
-  <hr>
+<div class="job-content">
+  <!--======== Start - Jobs上方区块 =========-->
+  <div class="row">
+    <!--======== Start - 左侧区块 =========-->
+    <div class="col-md-7 col-md-offset-1 job-info-box">
+      <h1><%= @job.title %><span class="company">  / <%= @job.company %></span></h1>
+      <p>
+        <span class="wage"><%= @job.wage_lower_bound %> k ~ <%= @job.wage_upper_bound %> k </span> /
+        <span><span class="fa fa-map-marker"></span> <%= @job.city %></span> /
+        <span><span class="<%= @job.category %>"> <%= @job.category %></span>
+       </p>
+        <hr style="width:150%" />
+    </div>
+    <!--======== End - 左侧区块 =========-->
 
-  <div class="text-center">
-    <% if current_user && current_user.is_favorite_of?(@job) %>
-    <%= link_to('取消收藏'.html_safe, favorite_job_path(@job, type: "unfavorite"), method: :put) %>
-     <% else %>
-    <%= link_to('添加收藏'.html_safe, favorite_job_path(@job, type: "favorite"), method: :put) %>
-    <% end %>
-    <%= link_to("投递简历", new_job_resume_path(@job), class: "btn btn-lg btn-primary") %>
+    <!--======== Start - 右侧区块 =========-->
+    <div class="col-md-3 job-action-box">
+      <div>
+        <!--==== 判断是否已收藏 ====-->
+        <% if current_user && current_user.is_favorite_of?(@job) %>
+          <%= link_to favorite_job_path(@job, type: "unfavorite"), method: :put, class: "btn btn-lg btn-primary" do %>
+            <span class="fa fa-star"></span> Collected
+          <% end %>
+        <% else %>
+          <%= link_to favorite_job_path(@job, type: "favorite"), method: :put, class: "btn btn-lg btn-default" do %>
+            <span class="fa fa-star-o"></span> Collect
+          <% end %>
+        <% end %>
+      </div>
+      <div>
+        <!--==== 判断是否已投过简历 ====-->
+        <% if current_user && current_user.has_applied?(@job) %>
+          <%= link_to("Delivered", '#', class: "btn btn-lg btn-danger") %>
+        <% else %>
+          <%= link_to("Deliver", new_job_resume_path(@job), class: "btn btn-lg btn-success") %>
+        <% end %>
+      </div>
+    </div>
+
+    <!--======== End - 右侧区块 =========-->
   </div>
+  <!--======== End - Jobs上方区块 =========-->
+
+  <!--======== Start - Jobs下方区块 =========-->
+  <div class="row">
+    <!--======== Start - 左侧区块 =========-->
+    <div class="col-md-7 col-md-offset-1 job-content-box">
+      <div class="content-info">
+        <h4>Description</h4>
+        <p><%= simple_format(@job.description) %></p>
+      </div>
+      <hr />
+      <div class="mail-info">
+        <h4>Email</h4>
+        <p class="email"><span class="fa fa-envelope"></span> <%= @job.contact_email %></p>
+      </div>
+    </div>
+    <!--======== End - 左侧区块 =========-->
+
+  </div>
+  <!--======== End - Jobs下方区块 =========-->
 </div>
