--- a/app/views/welcomes/index.html.erb
+++ b/app/views/welcomes/index.html.erb
@@ -95,28 +95,28 @@
  <div class="container">
    <div class="row">
      <div class="col-xs-12">
-       <h2>We want you </h2><br/></br>
+       <h2>About us</h2><br/></br>
       </div>
      </div>
    <div class="row">
      <div class="col-xs-12 col-sm-4">
-       <h4>Our define</h4>
+       <h4>Our definition</h4>
        <%= image_tag("feature1.jpg") %><br/><br/>
        <p>The term gourmet can refer to a person with refined or discriminating taste who is knowledgeable in the craft and art of food and food preparation.[1] Gourmand carries additional connotations of one who simply enjoys food in great quantities.</p>
-       <p class="visible-lg">An epicure is similar to a gourmet, but the word may sometimes carry overtones of excessive refinement. A gourmet chef is a chef of particularly high caliber of cooking talent and skill.</p>
+       <!-- <p class="visible-lg">An epicure is similar to a gourmet, but the word may sometimes carry overtones of excessive refinement. A gourmet chef is a chef of particularly high caliber of cooking talent and skill.</p> -->
      </div>
      <div class="col-xs-12 col-sm-4">
        <h4>Our pursuits</h4>
         <%= image_tag("feature2.jpg") %><br/><br/>
        <p>Certain events such as wine tastings cater to people who consider themselves gourmets and foodies. Television programs (such as those on the Food Network) and publications such as Gourmet magazine often serve gourmets with food columns and features. </p>
-       <p class="visible-lg"> Gourmet tourism is a niche industry catering to people who travel to food or wine tastings, restaurants, or food and wine production regions for leisure.</p>
+       <!-- <p class="visible-lg"> Gourmet tourism is a niche industry catering to people who travel to food or wine tastings, restaurants, or food and wine production regions for leisure.</p> -->
 
      </div>
      <div class="col-xs-12 col-sm-4">
        <h4>Our values</h4>
         <%= image_tag("feature3.jpg") %><br/><br/>
        <p>Food can bring happiness to the person, food is essential in our life, therefore, we choose good gourmet for people, they are proficient in different areas of food, to make or to enjoy healthy and delicious food, the easy to eat food, it is a very exciting thing, because there is such a group of people they serve.</p>
-       <p class="visible-lg">They don't need to own to choose food.Our value lies in to enjoy food and people like to eat all kinds of food service, because the people like food in general is deeply loves the life of the people, we are proud because their service.</p>
+       <!-- <p class="visible-lg">They don't need to own to choose food.Our value lies in to enjoy food and people like to eat all kinds of food service, because the people like food in general is deeply loves the life of the people, we are proud because their service.</p> -->
 
      </div>
    </div>
@@ -163,21 +163,21 @@
 
 <section class="base-sec parallax-section" id="base">
   <div class="container">
-    <div class="row">
-      <div class="col-md-3">
+    <!-- <div class="row">
+      <! <div class="col-md-3">
         <h2><small>Who We Are</small>About
           Us</h2>
       </div>
       <div class="col-md-4">
-        <p>To enjoy good health, to bring true happiness to one's family, to bring peace to all, one must first discipline and control one's own mind. If a man can control his mind he can find the way to Enlightenment, and all wisdom and virtue will naturally come to him.</p>
-        <p>Saving our planet, lifting people out of poverty, advancing economic growth... these are one and the same fight. We must connect the dots between climate change, water scarcity, energy shortages, global health, food security and women's empowerment. Solutions to one problem must be solutions for all.</p>
+        <! <p>To enjoy good health, to bring true happiness to one's family, to bring peace to all, one must first discipline and control one's own mind. If a man can control his mind he can find the way to Enlightenment, and all wisdom and virtue will naturally come to him.</p>
+        <p>Saving our planet, lifting people out of poverty, advancing economic growth... these are one and the same fight. We must connect the dots between climate change, water scarcity, energy shortages, global health, food security and women's empowerment. Solutions to one problem must be solutions for all.</p> -->
+      <!-- </div> -->
+      <div class="col-md-12  col-sm-12 text-center" >
+        <!-- <p>Our greatest happiness does not depend on the condition of life in which chance has placed us, but is always the result of a good conscience, good health, occupation, and freedom in all just pursuits.</p>
+        <p>Being in control of your life and having realistic expectations about your day-to-day challenges are the keys to stress management, which is perhaps the most important ingredient to living a happy, healthy and rewarding life.</p> -->
+        <p><a href="/jobs" class="btn btn-transparent-white btn-capsul" style="font-size: 30px" >Join Us</a></p>
       </div>
-      <div class="col-md-4">
-        <p>Our greatest happiness does not depend on the condition of life in which chance has placed us, but is always the result of a good conscience, good health, occupation, and freedom in all just pursuits.</p>
-        <p>Being in control of your life and having realistic expectations about your day-to-day challenges are the keys to stress management, which is perhaps the most important ingredient to living a happy, healthy and rewarding life.</p>
-        <p><a href="/jobs" class="btn btn-transparent-white btn-capsul">Join Us</a></p>
-      </div>
-    </div>
+    <!-- </div> -->
   </div>
 </section>
 
