--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -38,9 +38,11 @@
 
 }
 
+//dropdown font color
 .dropdown-menu > li > a{
   color: #bdc3c7;
 }
+//end
 
 .dropdown-menu .open > li:hover, .dropdown-menu .open > li:focus{
   background-color: #9b59b6;
@@ -231,7 +233,7 @@ stylize any heading tags withing white-panel below
 
 
 /*------------------------------------------------------------------
-                        FOOTER STYLES
+                        footer styles
 -------------------------------------------------------------------*/
 .footer{
   text-align:center;
@@ -461,4 +463,90 @@ section {
 
 .badge.badge-info{
   background: #9b59b6;
+}
+
+/*--------------单个工作展示页面------------*/
+job-info-box{
+  color: #333;
+  font-family: "Hiragino Sans GB","Microsoft Yahei",SimSun,Arial,"Helvetica Neue",Helvetica;
+
+  h3{
+    text-align: left;
+    color: #3D537F;
+  }
+
+  p{
+    font-size: 16px;
+    color: #666;
+  }
+  .company{
+    font-size: 20px;
+    color: #999;
+  }
+
+  .wage{
+    color: #FF7D0A;
+    letter-spacing: -1px;
+    font-size: 18px;
+  }
+
+  .created{
+    color: #999;
+    font-size: 14px;
+  }
+
+  .website{
+    letter-spacing: 1px;
+  }
+}
+
+.job-action-box{
+  text-align: right;
+  margin-top: 25px;
+  margin-right: 25px;
+
+  div{
+    width: 200px;
+    display: inline;
+  }
+
+  .btn-lg{
+    width: 125px;
+  }
+}
+
+.job-content-box{
+  letter-spacing: 0.5px;
+
+  h4{
+    color: #004080;
+    text-align: left;
+  }
+
+  .content-info{
+    min-height: 450px;
+    p{
+      line-height: 30px;
+    }
+  }
+
+  .mail-info{
+    margin-bottom: 75px;
+    font-size: 18px;
+
+    .email{
+      font-size: 16px;
+    }
+  }
+}
+
+/*------------简历界面展示页面------------*/
+.btn1{
+  background: #673AB7;
+  border-color: #ffffff;
+}
+
+.btn1:hover{
+  background-color: #9b59b6;
+  border-color: #ffffff;
 }
