--- a/app/views/jobs/_jobs_item.html.erb
+++ b/app/views/jobs/_jobs_item.html.erb
@@ -27,7 +27,7 @@
 
      <div class="col-md-3">
        <span class="badge badge-info">
-         salary： <span style="font-size:1em; background-color: #ffffff;"class="fa fa-rmb"></span><%= job.wage_lower_bound %> - <%= job.wage_upper_bound %> RMB
+         salary： <span style="font-size:1em;"class="fa fa-rmb"></span><%= job.wage_lower_bound %> - <%= job.wage_upper_bound %> RMB
        </span>
     </div>
     <div class="col-md-3">
