better favorite and myjobs views

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -555,3 +555,10 @@ job-info-box{
   background-color: #9b59b6;
   border-color: #ffffff;
 }
+
+/*--------------收藏界面显示-------------*/
+.job-show-1 {
+	margin-top: 50px;
+  min-height: 560px;
+  box-shadow: 1px 1px 1px 1px rgba(155, 89, 182, 0.9) inset
+}
