--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -48,7 +48,7 @@
 
        <div class="row">
         <div class="col-md-6">
-          <span style="font-size:1.3em"></i> <%= link_to(job.title, job_path(job)) %></span>
+          <span style="font-size:1.3em"><%= link_to(job.title, job_path(job)) %></span>
         </div>
       </div>
 
