--- a/app/views/admin/jobs/edit.html.erb
+++ b/app/views/admin/jobs/edit.html.erb
@@ -1,5 +1,6 @@
-<div class="col-md-12">
-  <h2>Edit Job</h2>
-
-  <%= render "form"%>
+<div class="col-md-6 col-md-offset-3 job-setup">
+  <div class="col-md-12 job-form-content">
+    <h2><span class="fa fa-file-text-o"></span> Edit job</h2>
+    <%= render('form') %>
+  </div>
 </div>
