--- a/app/views/admin/jobs/_form.html.erb
+++ b/app/views/admin/jobs/_form.html.erb
@@ -1,29 +1,25 @@
-<div class="col-md-8">
-  <%= simple_form_for [:admin,@job] do |f| %>
-  <div class="form-group">
-    <%= f.input :title, placeholder: 'job title'%>
-    <%= f.input :description %>
-    <%= f.input :wage_lower_bound, :label => 'wage_bound' do %>
-    <%= f.input_field :wage_lower_bound, :as => :string %>
-    K ~
-    <%= f.input_field :wage_upper_bound, :as => :string %>
-    K
-    <% end %>
 
-    <%= f.input :company %>
-    <% if @job.city? %>
-    <%= f.input :city, :collection => ["Beijing", "Shanghai", "Shenzhen", "Guangzhou"] , :checked => @job.city %>
-    <% else %>
-    <%= f.input :city, :collection => ["Beijing", "Shanghai", "Shenzhen", "Guangzhou"] %>
-    <% end %>
-    <% if @job.category? %>
-    <%= f.input :category, :collection => ["steak", "wine taster", "pastry cook", "tea art"], :checked => @job.category %>
-    <% else %>
-    <%= f.input :category, :collection => ["steak", "wine taster", "pastry cook", "tea art"] %>
-    <% end %>
-    <%= f.input :contact_email %>
-    <%= f.input :is_hidden %>
-  </div>
-  <%= f.submit "submit", disable_with:"submiting",:class => "btn btn-xs btn-info"%>
+
+<div class="col-md-10 col-md-offset-1 job-form-content">
+  <hr style="size:2px" />
+  <%= simple_form_for [:admin,@job] do |f| %>
+    <div class="form-group">
+      <%= f.input :title  %>
+      <%= f.input :description, input_html: { class: 'job-content-info' } %>
+      <%= f.input :company%>
+      <hr />
+      <%= f.input :category, :collection => ["steak", "wine taster", "pastry cook", "tea art"] %>
+      <%= f.input :city,  :collection => ["Beijing", "Shanghai", "Shenzhen", "Guangzhou"] %>
+      <%= f.input :wage_lower_bound, :label => 'salary' do %>
+         <%= f.input_field :wage_lower_bound, :as => :string, class: "wage" %> <span class="wage-form">k ~</span>
+         <%= f.input_field :wage_upper_bound, :as => :string, class: "wage" %> <span class="wage-form">k</span>
+      <% end %>
+      <%= f.input :contact_email %>
+      <hr />
+      <span class="hidden-box"><%= f.input :is_hidden, label: 'hidden' %></span>
+    </div>
+    <div class="form-actions">
+      <%= f.submit "Submit", disable_with: "Submiting...", class: "button"%>
+    </div>
   <% end %>
 </div>
