--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -640,3 +640,28 @@ job-info-box{
 
 
  }
+
+ /*-------------------管理员工作展示页面-------------*/
+ .nav.nav-pills.nav-stacked > li.active > a{
+   background: #673AB7;
+   font-size: 18px;
+
+
+ }
+
+ .nav-pills > li > a{
+   border-radius: 3px;
+ }
+
+ table{
+   box-shadow: 0 0 10px #999;
+ }
+
+ thead{
+   background-color: #eee;
+   font-size: 16px;
+ }
+
+ .job-list{
+    margin-top: 15px;
+  }
