--- a/app/views/admin/jobs/index.html.erb
+++ b/app/views/admin/jobs/index.html.erb
@@ -1,37 +1,35 @@
-
-<div class="pull-right">
-  <%= link_to("新增职位", new_admin_job_path, :class => "btn btn-xs btn-success" ) %>
+<div class="job">
+       <%= link_to("新增职位", new_admin_job_path, class: "btn btn-info pull-right action-btn") %>
 </div>
 
 <br><br>
 
 <table class="table table-boldered table-striped custab" >
+
     <thead>
         <tr>
             <td>
-                职缺
+                Title
             </td>
 
             <td>
-              收到履历数量
+              Resume counts
             </td>
             <td>
-                薪资下限
+              Salary
+            </td>
+
+            <td>
+                Manage
             </td>
             <td>
-                薪资上限
-            </td>
-            <td>
-                管理选项
-            </td>
-            <td>
-                刊登时间
+                Data Time
             </td>
         </tr>
     </thead>
 
     <% @jobs.each do |job| %>
-    <tr>
+    <tr class="job-list">
 
         <td>
             <%= render_job_status(job) %>
@@ -39,27 +37,31 @@
             <%= link_to(job.title, admin_job_path(job)) %>
         </td>
         <td> <%= link_to(job.resumes.count, admin_job_resumes_path(job)) %> </td>
-        <td> <%= job.wage_lower_bound %> </td>
-        <td> <%= job.wage_upper_bound %> </td>
+        <td> <%= job.wage_lower_bound %> - <%= job.wage_upper_bound %> RMB </td>
+
         <td>
-
-           <%= link_to("编辑", edit_admin_job_path(job), :class => "btn btn-xs btn-info") %>
-           <%= link_to("删除", admin_job_path(job), :method => :delete, :class => "btn btn-xs btn-danger", :data => { :confirm => "Are you sure?" }) %>
-
-           <% if job.is_hidden %>
-             <%= link_to("公布", publish_admin_job_path(job) , :method => :post, :class => "btn btn-xs btn-success") %>
-           <% else %>
-             <%= link_to("隐藏", hide_admin_job_path(job), :method => :post,  :class => "btn btn-xs btn-warning") %>
+           <%= link_to edit_admin_job_path(job), :class => "btn btn-xs btn-info" do %>
+           <span class="fa fa-pencil"></span>
            <% end %>
-
+           <% if job.is_hidden %>
+             <%= link_to publish_admin_job_path(job), :method => :post, :class => "btn btn-xs btn-success" do %>
+             <span class="fa fa-eye"></span>
+             <% end %>
+           <% else %>
+             <%= link_to hide_admin_job_path(job), :method => :post,  :class => "btn btn-xs btn-warning" do %>
+             <span class="fa fa-eye-slash"></span>
+            <% end %>
+           <% end %>
+           <%= link_to("Delete", admin_job_path(job), :method => :delete, :class => "btn btn-xs btn-danger", :data => { :confirm => "Are you sure?" }) %>
         </td>
+
         <td>
-            <%= job.created_at %>
+              <%= job.created_at.strftime("%Y-%m-%d") %>
         </td>
     </tr>
     <% end %>
 </table>
 
 <div class="text-center">
-  <%= will_paginate @jobs %>
+     <%= will_paginate @jobs, renderer: BootstrapPagination::Rails %>
 </div>
