set some details

--- a/app/views/admin/jobs/index.html.erb
+++ b/app/views/admin/jobs/index.html.erb
@@ -1,6 +1,6 @@
-<div class="job">
+<!-- <div class="job">
        <%= link_to("新增职位", new_admin_job_path, class: "btn btn-info pull-right action-btn") %>
-</div>
+</div> -->
 
 <br><br>
 
