--- a/app/views/admin/jobs/show.html.erb
+++ b/app/views/admin/jobs/show.html.erb
@@ -1,6 +1,37 @@
-<h1> <%= @job.title %> </h1>
+<div class="job-content">
+  <!--======== Start - Jobs上方区块 =========-->
+  <div class="row">
+    <!--======== Start - 左侧区块 =========-->
+    <div class="col-md-7 col-md-offset-1 job-info-box">
+      <h1><%= @job.title %><span class="company">  / <%= @job.company %></span></h1>
+      <p>
+        <span class="wage"><%= @job.wage_lower_bound %> k ~ <%= @job.wage_upper_bound %> k </span> /
+        <span><span class="fa fa-map-marker"></span> <%= @job.city %></span> /
+        <span><span class="<%= @job.category %>"> <%= @job.category %></span>
+       </p>
+        <hr style="width:150%" />
+    </div>
+    <!--======== End - 左侧区块 =========-->
 
-<p>
-  <%= simple_format(@job.description) %>
+  </div>
+  <!--======== End - Jobs上方区块 =========-->
 
-</p>
+  <!--======== Start - Jobs下方区块 =========-->
+  <div class="row">
+    <!--======== Start - 左侧区块 =========-->
+    <div class="col-md-7 col-md-offset-1 job-content-box">
+      <div class="content-info">
+        <h4>Description</h4>
+        <p><%= simple_format(@job.description) %></p>
+      </div>
+      <hr />
+      <div class="mail-info">
+        <h4>Email</h4>
+        <p class="email"><span class="fa fa-envelope"></span> <%= @job.contact_email %></p>
+      </div>
+    </div>
+    <!--======== End - 左侧区块 =========-->
+
+  </div>
+  <!--======== End - Jobs下方区块 =========-->
+</div>
