--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -17,8 +17,8 @@
           </div>
             <div class="row">
               <div class="col-md-2">
-                <ul class="nav nav-pills nav-stacked" style="max-width: 120px; padding-top:20px; b">
-                 <li class="active" ><%= link_to("Your Posts", admin_jobs_path ) %> </li>
+                <ul class="nav nav-pills nav-stacked" style="max-width: 120px; padding-top:20px;">
+                 <li class="active" ><%= link_to("My Posts", admin_jobs_path ) %> </li>
                  <li class="active" ><%= link_to("Add Job", new_admin_job_path) %> </li>
                 </ul>
               </div>
