add icon navbar

--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -5,8 +5,11 @@
       	<a class="navbar-brand" href="/">GOURMETS</a>
       </div>
       <div class="collapse navbar-collapse" >
-				<ul class="nav navbar-nav">
+				<!-- <ul class="nav navbar-nav navbar-left">
+					<li><%= link_to("Home", jobs_path, class: "scroll") %></li>
+        </ul> -->
 
+				<ul class="nav navbar-nav">
 					<li>
 						<div class="form-group form-inline search-bar">
 							 <%= render :partial => "jobs/search_bar"%>
@@ -24,15 +27,15 @@
                       Hello！ <%= current_user.name %>
                    <b class="caret"></b>
                    </a>
-               <ul class="dropdown-menu aria-labelledby="dropdownMenuDivider"">
+               <ul class="dropdown-menu  aria-labelledby="dropdownMenuDivider"">
                  <% if current_user.admin? %>
-                 <li> <%= link_to("Admin", admin_jobs_path)%></li>
+                <li><%= link_to('<span class="glyphicon glyphicon-edit"></span> Admin'.html_safe, admin_jobs_path) %></li>
 								  <li role="separator" class="divider"></li>
                  <% end %>
-                 <li> <%= link_to("My jobs", account_jobs_path)%></li>
-								 <li> <%= link_to('My favorites', favorites_path) %> </li>
+								  <li><%= link_to('<span class="glyphicon glyphicon-check"></span>  My jobs'.html_safe, account_jobs_path) %></li>
+								 <li> <%= link_to('<span class="glyphicon glyphicon-floppy-saved"></span>  My favorites'.html_safe, favorites_path) %> </li>
 								  <li role="separator" class="divider"></li>
-                 <li> <%= link_to("log out", destroy_user_session_path, method: :delete) %> </li>
+									 <li><%= link_to('<span class="glyphicon glyphicon-log-out"></span>  Log out'.html_safe,destroy_user_session_path, method: :delete) %></li>
               </ul>
              </li>
             <% end %>
