--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -35,6 +35,7 @@
     margin-bottom: 0;
     min-height: 70px;
     background-color: #ffffff;
+    text-align: left;
 
 }
 
@@ -90,17 +91,18 @@
 
 }
 
+
 .navbar button{
   background:#ccc;
 }
 
-.navbar span{
-  background: #9b59b6;
-  color: #9b59b6;
-}
+// .navbar span{
+//   background: #9b59b6;
+//   color: #9b59b6;
+// }
 
 .navbar a{
-  text-align:center;
+  text-align: left;
 }
 
 /*------------------------------------------------------------------
@@ -348,9 +350,8 @@ section {
 
 /*------------------------------ 登录页面 ----------------------------*/
 .user_setup{
-    height: 750px;
+    height: 850px;
     background: image_url("tea.jpg") no-repeat scroll top center/ cover;
-    margin-bottom: 0px;
 }
 
 @media (min-width: 768px) {
