--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<div class="row user_setup">
+<div class="row user_setup" >
   <div class="col-md-4 col-md-offset-4 user_setup_content">
     <div class="col-md-10 col-md-offset-1">
   <h2>Sign up</h2>
@@ -20,7 +20,8 @@
   </div>
 <% end %>
 <hr/>
-     <div class = “account”>
+
+     <div class = "account">
       <%= link_to "Log in", new_session_path(resource_name) %>
      </div>
    </div>
