--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -34,6 +34,7 @@
     border: 0;
     margin-bottom: 0;
     min-height: 70px;
+    min-width: 20px;
     background-color: #ffffff;
     text-align: left;
 
