--- a/app/views/resumes/new.html.erb
+++ b/app/views/resumes/new.html.erb
@@ -13,7 +13,8 @@
   <% end %>
 </div> -->
 <div class="col-md-12 job-content">
-  <h3> Send your resume</h3>
+  <h3> Send your resume to  <%= @job.title %></h3>
+
   <hr>
   <div class="col-md-4 col-md-offset-4">
     <%= simple_form_for [@job,@resume] do |f| %>
