--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -205,6 +205,7 @@ header{
   max-width: 100%;
   width: 100%;
 }
+
 img {
   width: 100%;
   max-width: 350px;
@@ -290,11 +291,12 @@ section {
 /* base section
 -------------------------------------------------- */
 .base-sec {
-	background: url('http://ww3.sinaimg.cn/large/006tNbRwgy1fev6acoih7j31hc0xqwu3.jpg') no-repeat center center;
+	background: url('http://ww2.sinaimg.cn/large/006tNbRwly1ffcl72ewwoj30zk0npagv.jpg') no-repeat center center;
 	background-size: cover;
 	color: #fff;
 	position: relative;
-  margin: 0;
+  margin: 0px;
+  height: 260px;
 
 
 }
@@ -352,7 +354,7 @@ section {
 /*------------------------------ 登录页面 ----------------------------*/
 .user_setup{
     height: 850px;
-    background: image_url("tea.jpg") no-repeat scroll top center/ cover;
+    background: url("http://ww2.sinaimg.cn/large/006tNbRwly1ffclafk8knj30zk0nltep.jpg") no-repeat scroll top center/ cover;
 }
 
 @media (min-width: 768px) {
