--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -7,7 +7,7 @@
   <%= f.error_notification %>
 
   <div class="form-inputs">
-    <%= f.input :is_admin, :label => false,  as: :radio_buttons, collection:  [['General User', false], ['Enterprise User', true]], required: true %>
+    <%= f.input :is_admim, :label => false,  as: :radio_buttons, collection:  [['General User', false], ['Enterprise User', true]], required: true %>
     <%= f.input :email, :label => false, placeholder:'your email address',required: true, autofocus: true %>
     <%= f.input :name, :label => false, placeholder: 'your name', required: true %>
 
